# CI-CD-Python

./: Dockerfile  ci.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: cd.yml  ci.yml
app/: main.py
my_cicd_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_health.py
